[gd_scene load_steps=4 format=3 uid="uid://b4qabwbwp2g23"]

[ext_resource type="Script" uid="uid://c4gmt1gnc8ess" path="res://actors/scripts/item_dispenser.gd" id="1_jb5kr"]
[ext_resource type="ArrayMesh" uid="uid://bc0cmg6stye8t" path="res://Assets/becon_platform_Cube_013.res" id="2_cqgba"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ml1lt"]
size = Vector3(2, 1, 2)

[node name="ItemDispenser" type="Node3D"]
script = ExtResource("1_jb5kr")

[node name="Graphics" type="MeshInstance3D" parent="."]
transform = Transform3D(0.62, 0, 0, 0, 0.62, 0, 0, 0, 0.62, 0, -0.30402696, 0)
mesh = ExtResource("2_cqgba")

[node name="DispensingArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 21

[node name="CollisionShape3D" type="CollisionShape3D" parent="DispensingArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_ml1lt")

[node name="AvaliabilityIndicator" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.06023094, 0)
light_color = Color(0.435294, 0.894118, 0.223529, 1)
omni_range = 1.08074
